# optilib

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt
executable/src/: main.cpp
include/optilib/: constraints.hpp  definitions.hpp  eigen_utils.hpp  gradient_sectioning.hpp  math.hpp  optimizer.hpp  rand.hpp  sectioning.hpp  simplex_downhill.hpp  stoppingcondition.hpp
tests/: CMakeLists.txt  test_gradient_sectioning.cpp  test_hyperplane.cpp  test_sectioning.cpp  test_simplex_downhill.cpp  test_stoppingconditions.cpp
